Add firt step to alumnosPractica

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
     "java.project.sourcePaths": [
-        "vectores_primitivo",
-        "Arrays",
-        "Practica-1"
+        "Practica-alumno"
     ]
 }
