--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "java.project.sourcePaths": [
-        "Practica-alumno"
+        "Practica-alumno",
+        "Matrices",
+        "Practica-2"
     ]
 }
