--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.sourcePaths": [
         "Practica-alumno",
+        "Practica-2",
         "Matrices",
-        "Practica-2"
+        "Practica-3"
     ]
 }
